Register and Log in components
Touch up on Home Page, added Register and Log In components (no database and authentication yet)

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #d9885d; 
+    background-color: #522a15; 
     color: white;
     padding: 15px;
     text-align: center;
